# zihmc-bot

./: README.md  bot.py  pyproject.toml  qqbot.sql  requirements.txt
data/: mc.json  mcfb.json  shouersign.txt
modules/: EPIC.py  MCBEID表.py  MCBE互通.py  MC更新日志提醒.py  MC版本提醒.py  MC皮肤获取.py  MotdBE.py  baoshi.py  chouqian.py  emoji合成.py  fbbv.py  heibaiimg.py  hlxsign.py  init.py  mcbeid.py  mcbv.py  mcskin.py  mtsign.py  mysql.py  shouersign.py  yangyang.py  一言.py  会员功能.py  卡密功能.py  戳我.py  报时.py  抽奖功能.py  抽签.py  排行榜功能.py  摸鱼.py  杂项功能.py  涩图.py  禁言功能.py  禁言抽奖.py  签到功能.py  管理功能.py  聊天功能.py  自动签到.py  菜单.py  词云统计.py  (+3 more)
old/: MotdBE.py  bot.py  fbbv.py  hlxsign.py  mcbb.ini  mcbv.py  mcbv.txt  mcskin.py  mc版本ini.py  mtsign.py  setu.py  shouersign.py  反馈库版本ini.py  抽签.txt  抽签记录.ini
test/: fkbb.ini
