[tool.poetry]
name = "zihmc-bot"
version = "0.0.1"
description = "没啥用的废物机器人"
authors = ["zihao-il <zihao1220@gmail.com>"]
readme = "README.md"
packages = [{include = "zihmc_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
graia-ariadne = {extras = ["standard"], version = "^0.11.2"}
graia-saya = "^0.0.17"
pymysql = "^1.0.3"
graiax-silkcoder = "^0.3.6"
aiohttp = "^3.8.4"
graia-scheduler = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
